# ErnOS-Hub

./: .gitignore  replit.md
.agents/: agent_assets_metadata.toml
android/: .gitignore  .gitmodules  README.md  gradle.properties  gradlew  offload_server.py  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/schemas/com.ernos.mobile.memory.db.AppDatabase/: 1.json
android/app/src/androidTest/kotlin/com/ernos/mobile/: SettingsInferencePropagationTest.kt  SettingsPropagationTest.kt  SettingsScreenTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
android/app/src/main/kotlin/com/ernos/mobile/: ChatScreen.kt  ChatViewModel.kt  ErnOSApplication.kt  LlamaRuntime.kt  MainActivity.kt
android/app/src/main/kotlin/com/ernos/mobile/bridge/: BootReceiver.kt  Bridge.kt  BridgeConfig.kt  BridgeService.kt  CustomBridgeBuilder.kt  DiscordBridge.kt  TelegramBridge.kt  UnifiedMessage.kt  WebhookServer.kt  WhatsAppBridge.kt
android/app/src/main/kotlin/com/ernos/mobile/engine/: InferenceBackend.kt  ReActLoopManager.kt  SystemPrompter.kt  ToolModels.kt  ToolRegistry.kt
android/app/src/main/kotlin/com/ernos/mobile/glasses/: GlassesFrame.kt  (+4 more)
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/: libs.versions.toml
attached_assets/: Pasted-ErnOS-Mobile-Hub-Production-Implementation-Plan-Problem_1774362845439.txt
(+26 files in other folders)
